Somewhat have the example resources working; still having trouble with generic ApiResponse; having trouble with wrong host name being generated
